NPE when executing cacheable query with null parameter #4023 (#4024)